Bug 934420 - Try to preserve the right APZC in the face of layer tree changes. r=botond